iptables.conf
# Generated by iptables-save v1.4.12 on Thu Feb  6 20:39:38 2014
*filter
:INPUT ACCEPT [58549:16070393]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [56855:20044940]
-A FORWARD -d 172.17.0.2/32 ! -i docker0 -o docker0 -p tcp -m tcp --dport 81 -j ACCEPT
-A FORWARD -d 172.17.0.2/32 ! -i docker0 -o docker0 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
COMMIT
# Completed on Thu Feb  6 20:39:38 2014
# Generated by iptables-save v1.4.12 on Thu Feb  6 20:39:38 2014
*nat
:PREROUTING ACCEPT [486:29497]
:INPUT ACCEPT [468:28363]
:OUTPUT ACCEPT [120:7651]
:POSTROUTING ACCEPT [122:7779]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 ! -d 172.17.0.0/16 -j MASQUERADE
-A POSTROUTING -s 10.0.3.0/24 ! -d 10.0.3.0/24 -j MASQUERADE
-A POSTROUTING -s 10.0.3.0/24 ! -d 10.0.3.0/24 -j MASQUERADE
-A DOCKER ! -i docker0 -p tcp -m tcp --dport 2222 -j DNAT --to-destination 172.17.0.2:22
-A DOCKER ! -i docker0 -p tcp -m tcp --dport 81 -j DNAT --to-destination 172.17.0.2:81
COMMIT
# Completed on Thu Feb  6 20:39:38 2014
